Mod updated for 1.4 and passed autotests

--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for ArrowPleaseFactionAddon
 
+1.4.1 - Mod updated for 1.4 and passed autotests
+
+
 1.0.3.0 - Pirate band should now also be removable at game-start
 
 
