Mod updated for 1.6 and passed autotests

--- a/Languages/ChineseTraditional/DefInjected/TraderkindDef/TraderkindDefs.xml
+++ b/Languages/ChineseTraditional/DefInjected/TraderkindDef/TraderkindDefs.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <Caravan_Medieval_BulkGoods.label>雜貨商人</Caravan_Medieval_BulkGoods.label>
   <Caravan_Medieval_WarMerchant.label>戰爭商人</Caravan_Medieval_WarMerchant.label>
