--- a/Languages/ChineseSimplified/DefInjected/FactionDef/FactionDefs.xml
+++ b/Languages/ChineseSimplified/DefInjected/FactionDef/FactionDefs.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <MedievalCivil.pawnSingular>中世纪居民</MedievalCivil.pawnSingular>
   <MedievalCivil.pawnsPlural>中世纪居民</MedievalCivil.pawnsPlural>
