--- a/Languages/ChineseSimplified/DefInjected/PawnkindDef/PawnkindDefs.xml
+++ b/Languages/ChineseSimplified/DefInjected/PawnkindDef/PawnkindDefs.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <Medieval_Peasant.label>农奴</Medieval_Peasant.label>
   <Medieval_Archer.label>弓兵</Medieval_Archer.label>
