--- a/Languages/ChineseSimplified/DefInjected/TraderlindDef/TraderkindDefs.xml
+++ b/Languages/ChineseSimplified/DefInjected/TraderlindDef/TraderkindDefs.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
   <Caravan_Medieval_BulkGoods.label>杂货商人</Caravan_Medieval_BulkGoods.label>
   <Caravan_Medieval_WarMerchant.label>战争商人</Caravan_Medieval_WarMerchant.label>
