--- a/Languages/ChineseTraditional/DefInjected/FactionDef/FactionDef.xml
+++ b/Languages/ChineseTraditional/DefInjected/FactionDef/FactionDef.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LanguageData>
   <MedievalCivil.pawnSingular>中世紀居民</MedievalCivil.pawnSingular>
   <MedievalCivil.pawnsPlural>中世紀居民</MedievalCivil.pawnsPlural>
